# aoc2024

./: README.md
aoc/: aoc.cabal  package.yaml
aoc-rust/: .gitignore  Cargo.toml
aoc-rust/src/: lib1.rs  main.rs  main1.rs
aoc-rust/src/p01/: main1.rs  mod.rs
aoc/app/: Main.hs
aoc/src/JP/: P1.ipynb  P2.ipynb
aoc/src/P01/: Main01.hs  Main02.hs
aoc/src/P02/: Main01.hs  Main02.hs  main.py
aoc/src/P03/: Main01.hs  Main02.hs  MainTest.hs  P3.ipynb  data2
aoc/src/P04/: Main01.hs  Main02.hs
aoc/src/P05/: Main01.hs  Main02.hs
aoc/src/P06/: Main01.hs  Main02.hs
aoc/src/P07/: Main01.hs  Main02.hs
aoc/src/P08/: Main01.hs  Main02.hs
