[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.6"
list_comprehension_macro = "0.1.1"
ndarray = "0.15.6"
nom = "7.1.3"
parser-combinators = "0.7.1"
partial_application = "0.2.1"
regex = "1.10.2"
